# duckdb-fastlanes

./: ._.editorconfig  .clang-format  .gitignore  CMakeLists.txt  Makefile  extension_config.cmake  flake.nix  flake.nix.bak  output.csv  performance.csv  test.db  vcpkg.json
.github/actions/install-llvm/: action.yml
.github/docker/linux_amd64/: Dockerfile
.github/docker/linux_arm64/: Dockerfile
.github/workflows/: MainDistributionPipeline.yml  _extension_distribution.yml
alp_doubles/: schema.json
benchmark/: Makefile  run_volumetric_benchmarks.py
benchmark/tpch/: q03.benchmark  tpch_load_parquet.benchmark.in  tpch_sf1_parquet.benchmark.in
benchmark/tpch/sf1/duckdb/: q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  tpch_sf1.benchmark.in
benchmark/tpch/sf1/fls/: load.sql  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  tpch_sf1.benchmark.in
benchmark/tpch/sf1/parquet/: load.sql  q01.benchmark  q02.benchmark  q03.benchmark  q04.benchmark  q05.benchmark  q06.benchmark  q07.benchmark  q08.benchmark  q09.benchmark  q10.benchmark  q11.benchmark  q12.benchmark  q13.benchmark  q14.benchmark  q15.benchmark  q16.benchmark  q17.benchmark  q18.benchmark  q19.benchmark  q20.benchmark  tpch_sf1.benchmark.in
benchmark_results/: tpch-sf1-delta.csv
benchmarks/: ._bench_fsst_interface.cpp  CMakeLists.txt  bench_duckdb_vectorbuffer.cpp  bench_fsst_interface.cpp  benchmark.cpp  generate_data.cpp  generate_data_footer_benchmark.py  generate_synth_data.py  generate_synth_schema_data.py  plot_runs.py
benchmarks/data/: generate_data_multi_file.py
benchmarks/include/: bench_duckdb_vectorbuffer.hpp  bench_fsst_interface.h  benchmark.hpp  generate_data.hpp  runner.hpp
data/weather-big/: schema.json
docs/: README.md
lineitem/: schema.json
scripts/: __init__.py  benchmark_parser.py  compare_fastlanes_vs_parquet.py  main.py  plot_query_timings.py  plot_volumetric_results.py  run_metadata_bench.py  run_simple_tpch_query.py  run_simple_tpch_query_cli.py  run_tpch_query_cli.py
scripts/benchmark/: generate.sh  generate_query_plan.py  generate_tpch_datav2.py  record_copy_results.py  run_query_benchmarks.py
scripts/data_generator/: generate_fls_files_v2.py  generate_public_bi.py  generate_test_data.py  generate_tpch_benchmarks.py  tpch_utils.py
scripts/data_generator/fls/: CMakeLists.txt  generate_fls.cpp  generate_fls_files.py
scripts/plot/: common.py  helpers.py  latency_vs_threads.py
src/: fast_lanes_extension.cpp  fastlanes_extension.cpp  read_fast_lanes.cpp  read_fls.cpp  write_fast_lanes.cpp  write_fls.cpp
src/include/: ._fast_lanes_extension.hpp  fast_lanes_extension.hpp  fastlanes_extension.hpp  read_fast_lanes.hpp  read_fls.hpp  write_fast_lanes.hpp  write_fls.hpp
src/include/reader/: fast_lanes_multi_file_info.hpp  fast_lanes_reader.hpp  filter_executor.hpp  fls_decode.hpp  fls_multi_file_info.hpp  fls_reader.hpp  materializer.hpp  row_group_filter.hpp  row_group_statistics.hpp  schema_builder.hpp  table_metadata.hpp  translation_utils.hpp
src/include/reader/materializer/: column_decoder.hpp  context.hpp  fls_kernel.hpp  fls_type_resolver.hpp  materializer.hpp
src/include/reader/materializer/kernels/: alp_kernel.hpp  alp_rd_kernel.hpp  constant_kernel.hpp  cross_rle_kernel.hpp  dictionary_kernel.hpp  frequency_kernel.hpp  fsst12_dict_kernel.hpp  fsst12_kernel.hpp  fsst_dict_kernel.hpp  fsst_kernel.hpp  rle_map_kernel.hpp  slpatch_kernel.hpp  transpose_kernel.hpp  uncompressed_kernel.hpp  unffor_kernel.hpp
src/include/writer/: fast_lanes_multi_file_info.hpp  fls_view_writer.hpp  fls_writer.hpp  materializer.hpp  translation_utils.hpp
src/reader/: fast_lanes_multi_file_info.cpp  fast_lanes_reader.cpp  filter_executor.cpp  fls_decode.cpp  fls_multi_file_info.cpp  fls_reader.cpp  materializer.cpp  row_group_filter.cpp  row_group_statistics.cpp  schema_builder.cpp  table_metadata.cpp  translation_utils.cpp
src/writer/: fast_lanes_multi_file_info.cpp  fls_view_writer.cpp  fls_writer.cpp  materializer.cpp  translation_utils.cpp
test/: all_types_multi_threaded.test  dec_ffst_opr_str_load.test  multithreaded-parquet.test  multithreaded.test  singlethreaded.test
test/sql/: ._singlethreaded.test  all_types_single_threaded.test  dec_ffst_opr_str_load.test  simple.test  singlethreaded.test  write.test
vcpkg-overlay/fastlanes/: portfile.cmake  vcpkg.json
